[main] Added sufflet pagination